add post service, post controller, and add main component
