# HarianWibuUI/src/app/services/models.ts
@@ -2,4 +2,7 @@
 /* eslint-disable */
 export { AuthRequest } from './models/auth-request';
 export { AuthResponse } from './models/auth-response';
+export { PageResponsePostResponse } from './models/page-response-post-response';
+export { PostRequest } from './models/post-request';
+export { PostResponse } from './models/post-response';
 export { RegisterRequest } from './models/register-request';
