# HarianWibuUI/src/app/services/models/page-response-post-response.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+import { PostResponse } from '../models/post-response';
+export interface PageResponsePostResponse {
+  content?: Array<PostResponse>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
