# HarianWibuUI/src/app/services/models/post-request.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface PostRequest {
+  content: string;
+  id?: number;
+  postName: string;
+}
