# HarianWibuUI/src/app/services/models/post-response.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface PostResponse {
+  content?: string;
+  image?: Array<string>;
+  owner?: string;
+  postId?: number;
+  postName?: string;
+}
