# HarianWibuUI/src/openapi/openapi.json
@@ -14,13 +14,102 @@
   },
   "servers": [
     { "url": "http://localhost:8088", "description": "Local ENV" },
-    { "url":"https://some-url.com", "description": "PROD ENV" }
+    { "description": "PROD ENV" }
   ],
   "security": [{ "bearerAuth": [] }],
   "paths": {
+    "/api/posts": {
+      "get": {
+        "tags": ["post-contoller"],
+        "operationId": "getAllPosts",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "integer", "format": "int32", "default": 0 }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "integer", "format": "int32", "default": 10 }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponsePostResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["post-contoller"],
+        "operationId": "savePost",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/PostRequest" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": { "type": "integer", "format": "int64" }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/posts/cover/{post-id}": {
+      "post": {
+        "tags": ["post-contoller"],
+        "operationId": "uploadImage",
+        "parameters": [
+          {
+            "name": "post-id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int64" }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "required": ["file"],
+                "type": "object",
+                "properties": {
+                  "file": { "type": "string", "format": "binary" }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": { "schema": { "type": "object" } }
+            }
+          }
+        }
+      }
+    },
     "/api/auth/signup": {
       "post": {
-        "tags": ["auth-controller"],
+        "tags": ["Authentication"],
         "operationId": "register",
         "requestBody": {
           "content": {
@@ -33,14 +122,16 @@
         "responses": {
           "201": {
             "description": "Created",
-            "content": { "*/*": { "schema": { "type": "object" } } }
+            "content": {
+              "application/json": { "schema": { "type": "object" } }
+            }
           }
         }
       }
     },
     "/api/auth/authenticate": {
       "post": {
-        "tags": ["auth-controller"],
+        "tags": ["Authentication"],
         "operationId": "authenticate",
         "requestBody": {
           "content": {
@@ -54,7 +145,7 @@
           "200": {
             "description": "OK",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": { "$ref": "#/components/schemas/AuthResponse" }
               }
             }
@@ -62,41 +153,57 @@
         }
       }
     },
-    "/api/posts/{id}": {
-      "get": {
+    "/api/posts/edit/{post-id}": {
+      "patch": {
         "tags": ["post-contoller"],
-        "operationId": "viewAllPost",
+        "operationId": "editPost",
         "parameters": [
           {
-            "name": "id",
-            "in": "query",
+            "name": "post-id",
+            "in": "path",
             "required": true,
-            "schema": { "type": "string" }
+            "schema": { "type": "integer", "format": "int64" }
           }
         ],
         "responses": {
           "200": {
             "description": "OK",
-            "content": { "*/*": { "schema": { "type": "string" } } }
+            "content": {
+              "application/json": {
+                "schema": { "type": "integer", "format": "int64" }
+              }
+            }
           }
         }
       }
     },
-    "/api/posts/all": {
+    "/api/posts/{post-id}": {
       "get": {
         "tags": ["post-contoller"],
-        "operationId": "viewAllPost_1",
+        "operationId": "viewPostById",
+        "parameters": [
+          {
+            "name": "post-id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int64" }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
-            "content": { "*/*": { "schema": { "type": "string" } } }
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/PostResponse" }
+              }
+            }
           }
         }
       }
     },
     "/api/auth/activate-account": {
       "get": {
-        "tags": ["auth-controller"],
+        "tags": ["Authentication"],
         "operationId": "confirm",
         "parameters": [
           {
@@ -112,6 +219,15 @@
   },
   "components": {
     "schemas": {
+      "PostRequest": {
+        "required": ["content", "postName"],
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64" },
+          "postName": { "type": "string" },
+          "content": { "type": "string" }
+        }
+      },
       "RegisterRequest": {
         "required": ["email", "password", "userName"],
         "type": "object",
@@ -132,6 +248,34 @@
       "AuthResponse": {
         "type": "object",
         "properties": { "token": { "type": "string" } }
+      },
+      "PageResponsePostResponse": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/PostResponse" }
+          },
+          "number": { "type": "integer", "format": "int32" },
+          "size": { "type": "integer", "format": "int32" },
+          "totalElements": { "type": "integer", "format": "int64" },
+          "totalPages": { "type": "integer", "format": "int32" },
+          "first": { "type": "boolean" },
+          "last": { "type": "boolean" }
+        }
+      },
+      "PostResponse": {
+        "type": "object",
+        "properties": {
+          "postId": { "type": "integer", "format": "int64" },
+          "postName": { "type": "string" },
+          "content": { "type": "string" },
+          "image": {
+            "type": "array",
+            "items": { "type": "string", "format": "byte" }
+          },
+          "owner": { "type": "string" }
+        }
       }
     },
     "securitySchemes": {
